doc: dependencies updated httpx added and requirements freeze

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 annotated-types==0.6.0
 anyio==4.3.0
+certifi==2024.2.2
 click==8.1.7
 exceptiongroup==1.2.1
 fastapi==0.110.2
 h11==0.14.0
+httpcore==1.0.5
 httptools==0.6.1
+httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
 packaging==24.0
