--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
 annotated-types==0.6.0
 anyio==4.3.0
+attrs==23.2.0
 certifi==2024.2.2
 click==8.1.7
+decorator==5.1.1
 exceptiongroup==1.2.1
 fastapi==0.110.2
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
+outcome==1.3.0.post0
 packaging==24.0
 pluggy==1.5.0
 pydantic==2.7.1
 pydantic_core==2.18.2
 pytest==8.2.0
+pytest-asyncio==0.23.6
+pytest-tornasync==0.6.0.post2
+pytest-trio==0.8.0
+pytest-twisted==1.14.1
 python-dotenv==1.0.1
 PyYAML==6.0.1
 sniffio==1.3.1
+sortedcontainers==2.4.0
 starlette==0.37.2
 tomli==2.0.1
+tornado==6.4
+trio==0.25.0
 typing_extensions==4.11.0
 uvicorn==0.29.0
 uvloop==0.19.0
