chore: disable docstring missing functions

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,6 +3,8 @@ name: Pylint
 on: [push]
 
 jobs:
+  disable:
+    - C0111 # missing docstring disable
   build:
     runs-on: ubuntu-latest
     strategy:
