--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 annotated-types==0.6.0
 anyio==4.3.0
+astroid==3.1.0
 attrs==23.2.0
 Automat==22.10.0
 certifi==2024.2.2
 click==8.1.7
 constantly==23.10.4
 decorator==5.1.1
+dill==0.3.8
 exceptiongroup==1.2.1
 fastapi==0.110.2
 greenlet==3.0.3
@@ -17,11 +19,15 @@ hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 iniconfig==2.0.0
+isort==5.13.2
+mccabe==0.7.0
 outcome==1.3.0.post0
 packaging==24.0
+platformdirs==4.2.1
 pluggy==1.5.0
 pydantic==2.7.1
 pydantic_core==2.18.2
+pylint==3.1.0
 pytest==8.2.0
 pytest-asyncio==0.23.6
 pytest-tornasync==0.6.0.post2
@@ -34,6 +40,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 starlette==0.37.2
 tomli==2.0.1
+tomlkit==0.12.4
 tornado==6.4
 trio==0.25.0
 Twisted==24.3.0
