--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - env:
+          API_URL_BASE_TEST: ${{ secrets.API_URL_BASE_TEST }}
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
