--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,9 +3,10 @@ run-name: ${{ github.actor }} is testing out Unit Tests 🚀
 on: [push]
 
 jobs:
+  needs:
+    secrets
   build:
     runs-on: ubuntu-22.04
-
     steps:
       - uses: actions/checkout@v4
       - name: Check API URL Base Test
