--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: '3.10'
       - name: My Environment Secrets
         env:
-          API_URL_BASE_TEST: ${{ vars.API_URL_BASE_TEST }}
+          API_URL_BASE_TEST: ${{ secrets.API_URL_BASE_TEST }}
         run: |
           echo "Environment Variables Loaded"
       - name: Install dependencies
