chore: debug secret value

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,9 @@ jobs:
           API_URL_BASE_TEST: ${{ secrets.API_URL_BASE_TEST }}
         run: |
           echo "Environment Variables Loaded"
+      - name: Debug Secret
+        run: |
+          echo "API_URL_BASE_TEST: $API_URL_BASE_TEST"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
