--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,14 +17,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: My Environment Secrets
-        env:
-          API_URL_BASE_TEST: ${{ secrets.API_URL_BASE_TEST }}
+      - name: Set Environment Variables
         run: |
-          echo "Environment Variables Loaded"
-      - name: Debug Secret
+          echo "export API_URL_BASE_TEST=${{ secrets.API_URL_BASE_TEST }}" >> $GITHUB_ENV
+      - name: Print Environment Variables
         run: |
-          echo "API_URL_BASE_TEST: ${{ secrets.API_URL_BASE_TEST }}"
+          echo $API_URL_BASE_TEST
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
