--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,6 +3,9 @@ run-name: ${{ github.actor }} is testing out Unit Tests 🚀
 on: [push]
 permissions: read-all
 
+env:
+  API_URL_BASE_TEST: ${{ secrets.API_URL_BASE_TEST }}
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -17,12 +20,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Set Environment Variables
-        run: |
-          echo "export API_URL_BASE_TEST=${{ secrets.API_URL_BASE_TEST }}" >> $GITHUB_ENV
-      - name: Print Environment Variables
-        run: |
-          echo $API_URL_BASE_TEST
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
