--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions PyTest
-run-name: ${{ github.actor }} is testing out Unit Tests 🚀
+run-name: ${{ github.actor }} is testing out PyLint and Unit Tests 🚀
 on: [push]
 permissions: read-all
 
@@ -24,6 +24,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Analysing the code with pylint
+        run: |
+          pylint --disable=C0111 $(git ls-files '*.py')
       - name: Test with pytest
         run: |
           pip install pytest
