--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,19 @@ anyio==4.3.0
 astroid==3.1.0
 attrs==23.2.0
 Automat==22.10.0
+blessed==1.20.0
+botocore==1.31.85
+cement==2.8.2
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.3
 constantly==23.10.4
 decorator==5.1.1
 dill==0.3.8
 exceptiongroup==1.2.1
 fastapi==0.110.2
+gen-passwd-api @ file:///home/abelcarvalho/Desktop/gen-passwd-api
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
@@ -20,9 +26,11 @@ idna==3.7
 incremental==22.10.0
 iniconfig==2.0.0
 isort==5.13.2
+jmespath==1.0.1
 mccabe==0.7.0
 outcome==1.3.0.post0
 packaging==24.0
+pathspec==0.10.1
 platformdirs==4.2.1
 pluggy==1.5.0
 pydantic==2.7.1
@@ -33,20 +41,27 @@ pytest-asyncio==0.23.6
 pytest-tornasync==0.6.0.post2
 pytest-trio==0.8.0
 pytest-twisted==1.14.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.1
+requests==2.31.0
+s3transfer==0.10.1
+semantic-version==2.8.5
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 starlette==0.37.2
+termcolor==1.1.0
 tomli==2.0.1
 tomlkit==0.12.4
 tornado==6.4
 trio==0.25.0
 Twisted==24.3.0
 typing_extensions==4.11.0
+urllib3==1.26.18
 uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
+wcwidth==0.1.9
 websockets==12.0
 zope.interface==6.3
